branches/libbulletc/src/btMultiBody_wrap.h


	EXPORT btMultiBody* btMultiBody_new(int n_links, btScalar mass, const btScalar* inertia, bool fixed_base_, bool can_sleep_);

	EXPORT void btMultiBody_addBaseForce(btMultiBody* obj, const btScalar* f);

	EXPORT void btMultiBody_addBaseTorque(btMultiBody* obj, const btScalar* t);

	EXPORT void btMultiBody_addJointTorque(btMultiBody* obj, int i, btScalar Q);

	EXPORT void btMultiBody_addLinkForce(btMultiBody* obj, int i, const btScalar* f);

	EXPORT void btMultiBody_addLinkTorque(btMultiBody* obj, int i, const btScalar* t);

	EXPORT void btMultiBody_applyDeltaVee(btMultiBody* obj, const btScalar* delta_vee, btScalar multiplier);

	EXPORT void btMultiBody_applyDeltaVee2(btMultiBody* obj, const btScalar* delta_vee);

	EXPORT void btMultiBody_calcAccelerationDeltas(btMultiBody* obj, const btScalar* force, btScalar* output, btAlignedScalarArray* scratch_r, btAlignedVector3Array* scratch_v);

	EXPORT void btMultiBody_checkMotionAndSleepIfRequired(btMultiBody* obj, btScalar timestep);

	EXPORT void btMultiBody_clearForcesAndTorques(btMultiBody* obj);

	EXPORT void btMultiBody_clearVelocities(btMultiBody* obj);

	EXPORT void btMultiBody_fillContactJacobian(btMultiBody* obj, int link, const btScalar* contact_point, const btScalar* normal, btScalar* jac, btAlignedScalarArray* scratch_r, btAlignedVector3Array* scratch_v, btAlignedMatrix3x3Array* scratch_m);

	EXPORT btScalar btMultiBody_getAngularDamping(btMultiBody* obj);

	EXPORT void btMultiBody_getAngularMomentum(btMultiBody* obj, btScalar* value);

	EXPORT btMultiBodyLinkCollider* btMultiBody_getBaseCollider(btMultiBody* obj);

	EXPORT void btMultiBody_getBaseForce(btMultiBody* obj, btScalar* value);

	EXPORT void btMultiBody_getBaseInertia(btMultiBody* obj, btScalar* value);

	EXPORT btScalar btMultiBody_getBaseMass(btMultiBody* obj);

	EXPORT void btMultiBody_getBaseOmega(btMultiBody* obj, btScalar* value);

	EXPORT void btMultiBody_getBasePos(btMultiBody* obj, btScalar* value);

	EXPORT void btMultiBody_getBaseTorque(btMultiBody* obj, btScalar* value);

	EXPORT void btMultiBody_getBaseVel(btMultiBody* obj, btScalar* value);

	EXPORT int btMultiBody_getCompanionId(btMultiBody* obj);

	EXPORT btScalar btMultiBody_getJointPos(btMultiBody* obj, int i);

	EXPORT btScalar btMultiBody_getJointTorque(btMultiBody* obj, int i);

	EXPORT btScalar btMultiBody_getJointVel(btMultiBody* obj, int i);

	EXPORT btScalar btMultiBody_getKineticEnergy(btMultiBody* obj);

	EXPORT btScalar btMultiBody_getLinearDamping(btMultiBody* obj);

	EXPORT btMultibodyLink* btMultiBody_getLink(btMultiBody* obj, int index);

	EXPORT void btMultiBody_getLinkForce(btMultiBody* obj, int i, btScalar* value);

	EXPORT void btMultiBody_getLinkInertia(btMultiBody* obj, int i, btScalar* value);

	EXPORT btScalar btMultiBody_getLinkMass(btMultiBody* obj, int i);

	EXPORT const btScalar* btMultiBody_getLinkTorque(btMultiBody* obj, int i);

	EXPORT btScalar btMultiBody_getMaxAppliedImpulse(btMultiBody* obj);

	EXPORT int btMultiBody_getNumLinks(btMultiBody* obj);

	EXPORT int btMultiBody_getParent(btMultiBody* obj, int link_num);

	EXPORT void btMultiBody_getParentToLocalRot(btMultiBody* obj, int i, btScalar* value);

	EXPORT void btMultiBody_getRVector(btMultiBody* obj, int i, btScalar* value);

	EXPORT bool btMultiBody_getUseGyroTerm(btMultiBody* obj);

	EXPORT const btScalar* btMultiBody_getVelocityVector(btMultiBody* obj);

	EXPORT void btMultiBody_getWorldToBaseRot(btMultiBody* obj, btScalar* value);

	EXPORT void btMultiBody_goToSleep(btMultiBody* obj);

	EXPORT bool btMultiBody_hasFixedBase(btMultiBody* obj);

	EXPORT bool btMultiBody_hasSelfCollision(btMultiBody* obj);

	EXPORT bool btMultiBody_isAwake(btMultiBody* obj);

	EXPORT void btMultiBody_localDirToWorld(btMultiBody* obj, int i, const btScalar* vec, btScalar* value);

	EXPORT void btMultiBody_localPosToWorld(btMultiBody* obj, int i, const btScalar* vec, btScalar* value);

	EXPORT void btMultiBody_setBaseCollider(btMultiBody* obj, btMultiBodyLinkCollider* collider);

	EXPORT void btMultiBody_setBaseInertia(btMultiBody* obj, const btScalar* inertia);

	EXPORT void btMultiBody_setBaseMass(btMultiBody* obj, btScalar mass);

	EXPORT void btMultiBody_setBaseOmega(btMultiBody* obj, const btScalar* omega);

	EXPORT void btMultiBody_setBasePos(btMultiBody* obj, const btScalar* pos);

	EXPORT void btMultiBody_setBaseVel(btMultiBody* obj, const btScalar* vel);

	EXPORT void btMultiBody_setCanSleep(btMultiBody* obj, bool canSleep);

	EXPORT void btMultiBody_setCompanionId(btMultiBody* obj, int id);

	EXPORT void btMultiBody_setHasSelfCollision(btMultiBody* obj, bool hasSelfCollision);

	EXPORT void btMultiBody_setJointPos(btMultiBody* obj, int i, btScalar q);

	EXPORT void btMultiBody_setJointVel(btMultiBody* obj, int i, btScalar qdot);

	EXPORT void btMultiBody_setLinearDamping(btMultiBody* obj, btScalar damp);

	EXPORT void btMultiBody_setMaxAppliedImpulse(btMultiBody* obj, btScalar maxImp);

	EXPORT void btMultiBody_setNumLinks(btMultiBody* obj, int numLinks);

	EXPORT void btMultiBody_setupPrismatic(btMultiBody* obj, int i, btScalar mass, const btScalar* inertia, int parent, const btScalar* rot_parent_to_this, const btScalar* joint_axis, const btScalar* r_vector_when_q_zero);

	EXPORT void btMultiBody_setupPrismatic2(btMultiBody* obj, int i, btScalar mass, const btScalar* inertia, int parent, const btScalar* rot_parent_to_this, const btScalar* joint_axis, const btScalar* r_vector_when_q_zero, bool disableParentCollision);

	EXPORT void btMultiBody_setupRevolute(btMultiBody* obj, int i, btScalar mass, const btScalar* inertia, int parent, const btScalar* zero_rot_parent_to_this, const btScalar* joint_axis, const btScalar* parent_axis_position, const btScalar* my_axis_position);